--- a/elohim-app/src/app/components/hero/hero.component.html
+++ b/elohim-app/src/app/components/hero/hero.component.html
@@ -1,7 +1,10 @@
 <section class="hero">
   <div class="hero-content">
+    <div class="logo-container">
+      <img src="/images/elohim_logo_light.png" alt="Elohim Protocol Logo" class="hero-logo">
+    </div>
     <h1>Elohim Protocol</h1>
-    <p>Digital guardians for human flourishing. Technology organized around love.</p>
+    <p class="hero-subtitle">Digital guardians for human flourishing. Technology organized around love.</p>
   </div>
   <div class="scroll-indicator">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -9,3 +12,4 @@
     </svg>
   </div>
 </section>
+<div class="space-atmosphere-transition"></div>
